--- a/index.html
+++ b/index.html
@@ -20,5 +20,19 @@ and open the template in the editor.
             <li><a href="default.asp">Home</a></li>
             <li><a href="default.asp">Home</a></li>
         </ul>
+        <h1>Fallout 4 fan stránky - Studentský projekt</h1>
+        <p>Tato fanouškovská stránka se zabývá hrou Fallout 4, vyvinutá vývojářským studiem Bethesda.</p>
+    	<main>
+    		 <section>
+    		 	<article>
+    		 		<h2>Novinka 1</h2>
+    		 		<p>Lorem Ipsum here I come, Lorem Ipsum be my wife, Lorem Ipsum end my life.</p>
+    		 	</article>
+    		 	<article>
+    		 		<h2>Novinka 2</h2>
+    		 		<p>Taky taky něco možná někdy bude ale bůh ví kdy, musíte se s tím vypořádat (nejlépe hodně litry alkoholu a čistících prostředků).</p>
+    		 	</article>
+    		 </section>
+    	</main>
     </body>
 </html>
