--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ and open the template in the editor.
     		 	</article>
     		 	<article>
     		 		<h2>Fallout 4 bylo konečně oznámeno na E3 2015 Bethesda konferenci . . . 15.6.2015</h2>
-    		 		<p>Todd Howard, bůh mu požehnej jeho sladké lži, konečně oznámil vývoj dlouho očekávaného pokračování Fallout série.</p>
+    		 		<p>Todd Howard, bůh mu požehnej jeho sladkým lžím, konečně oznámil vývoj dlouho očekávaného pokračování Fallout série.</p>
     		 	</article>
     		 </section>
     	</main>
