--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
             <li><a href="default.asp">Home</a></li>
             <li><a href="default.asp">Home</a></li>
         </ul>
+	<div id="page">
         <h1>Fallout 4 fan stránky - Studentský projekt</h1>
         <p>Tato fanouškovská stránka se zabývá hrou Fallout 4, vyvinutá vývojářským studiem Bethesda.</p>
     	<main>
@@ -60,5 +61,6 @@ and open the template in the editor.
     		 	</article>
     		 </section>
     	</main>
+	</div>
     </body>
 </html>
