Přidána patička a tlačítko "nahoru"

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <link rel="stylesheet" type="text/css" href="reset.css">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
-    <body>
+    <body>      
         <div id="nav-placeholder">
             <script>
                 $(function ()
@@ -72,6 +72,17 @@ and open the template in the editor.
                     </article>
                 </section>
             </main>
+            <a href="#nav-placeholder">            
+                <div id = "toTop"> 
+                    <div></div>
+                    Nahoru
+                </div>
+            </a>
         </div>
+            <footer>
+                <div id="footer">
+                <p>footer</p>
+                </div>
+            </footer>
     </body>
 </html>
