--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ and open the template in the editor.
         <div id="page">
             <h1>Fallout 4 fan stránky - Studentský projekt</h1>
             <p>Tato fanouškovská stránka se zabývá hrou Fallout 4, vyvinutá vývojářským studiem Bethesda.</p>
+            <div id="powerArmor">
+                
+            </div>
             <main>
                 <section>
                     <h2>Novinky</h2>
