--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <ul id="nav">
     <li><a href="weapons.html">Zbraně</a></li>
-    <li><a href="default.asp">Dva</a></li>
+    <li><a href="galery.html">Galerie</a></li>
     <li><a href="default.asp">Tři</a></li>
     <li><a href="default.asp">Čtyři</a></li>
     <li><a href="default.asp">Pět</a></li>
