--- a/weapons.html
+++ b/weapons.html
@@ -24,177 +24,177 @@ and open the template in the editor.
         </div>
         <div id="page">
             <section>
-	<h2>Pistole</h2>
-	<table>
-		<tr>
-			<th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
-			<th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-			<th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-			<th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-			<th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-			<th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/pistols/44_pistol.png" alt="Obrázek revolveru" style="width:100px;height:50px;"></th>
-			<th>.44 pistol</th>
-			<th>48</th>
-			<th>6</th>
-			<th>99</th>
-			<th>4.2</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/pistols/10mm_pistol.png" alt="Obrázek pistole" style="width:100px;height:50px;"></th>
-			<th>10mm Pistol</th>
-			<th>18</th>
-			<th>12</th>
-			<th>50</th>
-			<th>3.5</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/pistols/Deliverer.png" alt="Obrázek pistole" style="width:100px;height:50px;"></th>
-			<th>Deliverer</th>
-			<th>25</th>
-			<th>12</th>
-			<th>774</th>
-			<th>4.4</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/pistols/Flare_gun.png" alt="Obrázek světlice" style="width:100px;height:50px;"></th>
-			<th>Flare gun</th>
-			<th>10</th>
-			<th>1</th>
-			<th>50</th>
-			<th>2</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/pistols/WesternPistol.png" alt="Obrázek revolveru" style="width:100px;height:50px;"></th>
-			<th>Western revolver</th>
-			<th>60</th>
-			<th>6</th>
-			<th>99</th>
-			<th>5.2</th>
-		</tr>
-	</table>
-</section>
-<section>
-	<h2>Pušky</h2>
-	<table>
-		<tr>
-			<th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
-			<th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-			<th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-			<th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-			<th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-			<th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/rifles/Combat_rifle.png" alt="Obrázek bojové pušky" style="width:100px;height:50px;"></th>
-			<th>Combat rifle</th>
-			<th>55</th>
-			<th>20</th>
-			<th>117</th>
-			<th>11.1</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/rifles/Assault_rifle.png" alt="Obrázek útočné pušky" style="width:100px;height:50px;"></th>
-			<th>Assault rifle</th>
-			<th>30</th>
-			<th>30</th>
-			<th>144</th>
-			<th>13.1</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/rifles/Hunting_rifle.png" alt="Obrázek lovecké pušky" style="width:100px;height:50px;"></th>
-			<th>Hunting rifle</th>
-			<th>64</th>
-			<th>5</th>
-			<th>306</th>
-			<th>15.5</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/rifles/Homemade_rifle.png" alt="Obrázek podomácku vyrobené pušky" style="width:100px;height:50px;"></th>
-			<th>Homemade rifle</th>
-			<th>65</th>
-			<th>75</th>
-			<th>6855</th>
-			<th>23.6</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/rifles/Gauss_rifle.png" alt="Obrázek gaussovy pušky" style="width:100px;height:50px;"></th>
-			<th>Gauss rifle</th>
-			<th>110</th>
-			<th>7</th>
-			<th>228</th>
-			<th>15.8</th>
-		</tr>
-	</table>
-</section>
-<section>
-	<h2>Brokovnice</h2>
-	<table>
-		<tr>
-			<th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
-			<th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-			<th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-			<th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-			<th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-			<th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/shotguns/Double_barrel.png" alt="Obrázek dvouhlavňové brokovnice" style="width:100px;height:50px;"></th>
-			<th>Double barrel shotgun</th>
-			<th>45</th>
-			<th>2</th>
-			<th>39</th>
-			<th>9</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/shotguns/Combat_shotgun.png" alt="Obrázek útočné brokovnice" style="width:100px;height:50px;"></th>
-			<th>Combat shotgun</th>
-			<th>50</th>
-			<th>8</th>
-			<th>389</th>
-			<th>15.7</th>
-		</tr>
-	</table>
-</section>
-<section>
-	<h2>Energetické zbraně</h2>
-	<table>
-		<tr>
-			<th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
-			<th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-			<th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-			<th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-			<th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-			<th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/energy/Laser_rifle.png" alt="Obrázek laserové pušky" style="width:100px;height:50px;"></th>
-			<th>Laser rifle</th>
-			<th>55</th>
-			<th>27</th>
-			<th>807</th>
-			<th>6.3</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/energy/Plasma_gun.png" alt="Obrázek plasmové zbraně" style="width:100px;height:50px;"></th>
-			<th>Plasma gun</th>
-			<th>25+25</th>
-			<th>15</th>
-			<th>602</th>
-			<th>4.8</th>
-		</tr>
-		<tr>
-			<th><img src="images/weapons_list/energy/Gatling_laser.png" alt="Obrázek laserového rotačáku" style="width:100px;height:50px;"></th>
-			<th>Gatling laser</th>
-			<th>79</th>
-			<th>500</th>
-			<th>4799</th>
-			<th>39.3</th>
-		</tr>
-	</table>
-</section>
+                <h2>Pistole</h2>
+                <table class="weapons">
+                    <tr>
+                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/pistols/44_pistol.png" alt="Obrázek revolveru" style="width:100px;height:50px;"></th>
+                        <th>.44 pistol</th>
+                        <th>48</th>
+                        <th>6</th>
+                        <th>99</th>
+                        <th>4.2</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/pistols/10mm_pistol.png" alt="Obrázek pistole" style="width:100px;height:50px;"></th>
+                        <th>10mm Pistol</th>
+                        <th>18</th>
+                        <th>12</th>
+                        <th>50</th>
+                        <th>3.5</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/pistols/Deliverer.png" alt="Obrázek pistole" style="width:100px;height:50px;"></th>
+                        <th>Deliverer</th>
+                        <th>25</th>
+                        <th>12</th>
+                        <th>774</th>
+                        <th>4.4</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/pistols/Flare_gun.png" alt="Obrázek světlice" style="width:100px;height:50px;"></th>
+                        <th>Flare gun</th>
+                        <th>10</th>
+                        <th>1</th>
+                        <th>50</th>
+                        <th>2</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/pistols/WesternPistol.png" alt="Obrázek revolveru" style="width:100px;height:50px;"></th>
+                        <th>Western revolver</th>
+                        <th>60</th>
+                        <th>6</th>
+                        <th>99</th>
+                        <th>5.2</th>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h2>Pušky</h2>
+                <table class="weapons">
+                    <tr>
+                        <th></th>
+                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/rifles/Combat_rifle.png" alt="Obrázek bojové pušky" style="width:100px;height:50px;"></th>
+                        <th>Combat rifle</th>
+                        <th>55</th>
+                        <th>20</th>
+                        <th>117</th>
+                        <th>11.1</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/rifles/Assault_rifle.png" alt="Obrázek útočné pušky" style="width:100px;height:50px;"></th>
+                        <th>Assault rifle</th>
+                        <th>30</th>
+                        <th>30</th>
+                        <th>144</th>
+                        <th>13.1</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/rifles/Hunting_rifle.png" alt="Obrázek lovecké pušky" style="width:100px;height:50px;"></th>
+                        <th>Hunting rifle</th>
+                        <th>64</th>
+                        <th>5</th>
+                        <th>306</th>
+                        <th>15.5</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/rifles/Homemade_rifle.png" alt="Obrázek podomácku vyrobené pušky" style="width:100px;height:50px;"></th>
+                        <th>Homemade rifle</th>
+                        <th>65</th>
+                        <th>75</th>
+                        <th>6855</th>
+                        <th>23.6</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/rifles/Gauss_rifle.png" alt="Obrázek gaussovy pušky" style="width:100px;height:50px;"></th>
+                        <th>Gauss rifle</th>
+                        <th>110</th>
+                        <th>7</th>
+                        <th>228</th>
+                        <th>15.8</th>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h2>Brokovnice</h2>
+                <table class="weapons">
+                    <tr>
+                        <th></th>
+                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/shotguns/Double_barrel.png" alt="Obrázek dvouhlavňové brokovnice" style="width:100px;height:50px;"></th>
+                        <th>Double barrel shotgun</th>
+                        <th>45</th>
+                        <th>2</th>
+                        <th>39</th>
+                        <th>9</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/shotguns/Combat_shotgun.png" alt="Obrázek útočné brokovnice" style="width:100px;height:50px;"></th>
+                        <th>Combat shotgun</th>
+                        <th>50</th>
+                        <th>8</th>
+                        <th>389</th>
+                        <th>15.7</th>
+                    </tr>
+                </table>
+            </section>
+            <section>
+                <h2>Energetické zbraně</h2>
+                <table class="weapons"> 
+                    <tr>
+                        <th></th>
+                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/energy/Laser_rifle.png" alt="Obrázek laserové pušky" style="width:100px;height:50px;"></th>
+                        <th>Laser rifle</th>
+                        <th>55</th>
+                        <th>27</th>
+                        <th>807</th>
+                        <th>6.3</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/energy/Plasma_gun.png" alt="Obrázek plasmové zbraně" style="width:100px;height:50px;"></th>
+                        <th>Plasma gun</th>
+                        <th>25+25</th>
+                        <th>15</th>
+                        <th>602</th>
+                        <th>4.8</th>
+                    </tr>
+                    <tr>
+                        <th><img src="images/weapons_list/energy/Gatling_laser.png" alt="Obrázek laserového rotačáku" style="width:100px;height:50px;"></th>
+                        <th>Gatling laser</th>
+                        <th>79</th>
+                        <th>500</th>
+                        <th>4799</th>
+                        <th>39.3</th>
+                    </tr>
+                </table>
+            </section>
             <a href="#nav-placeholder">            
                 <div id = "toTop"> 
                     <div></div>
@@ -202,10 +202,10 @@ and open the template in the editor.
                 </div>
             </a>
         </div>
-            <footer>
-                <div id="footer">
+        <footer>
+            <div id="footer">
                 <p>footer</p>
-                </div>
-            </footer>
+            </div>
+        </footer>
     </body>
 </html>
