--- a/weapons.html
+++ b/weapons.html
@@ -27,12 +27,12 @@ and open the template in the editor.
                 <h2>Pistole</h2>
                 <table class="weapons">
                     <tr>
-                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+			            <th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
+			            <th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+			            <th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+			            <th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
                     </tr>
                     <tr>
                         <th><img src="images/weapons_list/pistols/44_pistol.png" alt="Obrázek revolveru" style="width:100px;height:50px;"></th>
@@ -80,12 +80,12 @@ and open the template in the editor.
                 <h2>Pušky</h2>
                 <table class="weapons">
                     <tr>
-                        <th></th>
-                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+			            <th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
+			            <th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+			            <th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+			            <th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
                     </tr>
                     <tr>
                         <th><img src="images/weapons_list/rifles/Combat_rifle.png" alt="Obrázek bojové pušky" style="width:100px;height:50px;"></th>
@@ -133,12 +133,12 @@ and open the template in the editor.
                 <h2>Brokovnice</h2>
                 <table class="weapons">
                     <tr>
-                        <th></th>
-                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+			            <th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
+			            <th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+			            <th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+			            <th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
                     </tr>
                     <tr>
                         <th><img src="images/weapons_list/shotguns/Double_barrel.png" alt="Obrázek dvouhlavňové brokovnice" style="width:100px;height:50px;"></th>
@@ -162,12 +162,12 @@ and open the template in the editor.
                 <h2>Energetické zbraně</h2>
                 <table class="weapons"> 
                     <tr>
-                        <th></th>
-                        <th><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
-                        <th><img src="images/weapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
+			            <th>Obrázek<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Obrázek zbraně" style="width:10px;height:10px;"></th>
+			            <th>Název<br><img src="images/weapons_list/icons/Icon_gun.png" alt="Název zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zranění<br><img src="images/weapons_list/icons/Icon_damage.png" alt="Zranění zbraně" style="width:10px;height:10px;"></th>
+			            <th>Zásobník<br><img src="images/weapons_list/icons/Icon_magazine.png" alt="Náboje v zásobníku" style="width:10px;height:10px;"></th>
+			            <th>Cena<br><img src="images/weapons_list/icons/Icon_merchant.png" alt="Cena zbraně" style="width:10px;height:10px;"></th>
+			            <th>Váha<br><img src="images/eapons_list/icons/Icon_weight.png" alt="Váha zbraně" style="width:10px;height:10px;"></th>
                     </tr>
                     <tr>
                         <th><img src="images/weapons_list/energy/Laser_rifle.png" alt="Obrázek laserové pušky" style="width:100px;height:50px;"></th>
