--- a/weapons.html
+++ b/weapons.html
@@ -23,6 +23,7 @@ and open the template in the editor.
             </script>
         </div>
         <div id="page">
+	<main>
             <section>
                 <h2>Pistole</h2>
                 <table class="weapons">
@@ -195,6 +196,7 @@ and open the template in the editor.
                     </tr>
                 </table>
             </section>
+		</main>
             <a href="#nav-placeholder">            
                 <div id = "toTop"> 
                     <div></div>
