--- a/galery.html
+++ b/galery.html
@@ -31,12 +31,8 @@ and open the template in the editor.
                 <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
                 <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
             </div>
-            <a href="#nav-placeholder">   
-                <div id = "leftToTop"></div>
-                <div id = "toTop"> 
-                    <div></div>
-                    Nahoru
-                </div>
+            <a href="#nav-placeholder"> 
+                <div id = "toTop">To Top</div>
             </a>
         </div>
         <footer>
