--- a/weapons.html
+++ b/weapons.html
@@ -23,7 +23,7 @@ and open the template in the editor.
             </script>
         </div>
         <div id="page">
-	<main>
+            <main>
             <section>
                 <h2>Pistole</h2>
                 <table class="weapons">
@@ -196,12 +196,9 @@ and open the template in the editor.
                     </tr>
                 </table>
             </section>
-		</main>
+            </main>
             <a href="#nav-placeholder">            
-                <div id = "toTop"> 
-                    <div></div>
-                    Nahoru
-                </div>
+                <div id = "toTop">To Top</div>
             </a>
         </div>
         <footer>
