--- a/guides.html
+++ b/guides.html
@@ -32,15 +32,15 @@ and open the template in the editor.
                     		<th>Autor</th>
                     	</tr>
                     	<tr>
-                    		<th><a href="http://kitlab.pef.czu.cz/~ete30e_1718_41/builds.html">Zábavné buildy postav</a></th>
+                    		<th><a href="builds.html">Zábavné buildy postav</a></th>
                     		<th>Tomáš Klapka</th>
                     	</tr>
                     	<tr>
-                    		<th><a href="http://kitlab.pef.czu.cz/~ete30e_1718_41/startguide.html">Ideální začátek po opuštěný vaultu</a></th>
+                    		<th><a href="startguide.html">Ideální začátek po opuštěný vaultu</a></th>
                     		<th>Jakub Krejdl</th>
                     	</tr>
                     	<tr>
-                    		<th><a href="http://kitlab.pef.czu.cz/~ete30e_1718_41/settlements.html">Nejlepší a oblasti pro stavbu osady</a></th>
+                    		<th><a href="settlements.html">Nejlepší a oblasti pro stavbu osady</a></th>
                     		<th>Vault Dweller</th>
                     	</tr>
                     </table>
