--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <ul id="nav">
+    <li><a href="index.html">Index</a></li>
     <li><a href="weapons.html">Zbraně</a></li>
     <li><a href="galery.html">Galerie</a></li>
-    <li><a href="default.asp">Tři</a></li>
-    <li><a href="default.asp">Čtyři</a></li>
+    <li><a href="guides.html">Články</a></li>
     <li><a href="default.asp">Pět</a></li>
 </ul>
