--- a/builds.html
+++ b/builds.html
@@ -178,9 +178,14 @@ and open the template in the editor.
             </a>
         </div>
             <footer>
-                <div id="footer">
-                <p>footer</p>
-                </div>
+            <div id="footer">
+                <script>
+                    $(function ()
+                    {
+                        $("#footer").load("foot.html");
+                    });
+                </script>
+            </div>
             </footer>
     </body>
 </html>
