--- a/galery.html
+++ b/galery.html
@@ -25,11 +25,9 @@ and open the template in the editor.
         <div id="page">
             <div class="galery">
                 <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
+                <a href="2.png"><img class="img" src="2.png" alt="Mountain View"></a>
+                <a href="3.jpg"><img class="img" src="3.jpg" alt="Mountain View"></a>
+                <a href="4.jpg"><img class="img" src="4.jpg" alt="Mountain View"></a>
             </div>
             <a href="#nav-placeholder"> 
                 <div id = "toTop">To Top</div>
@@ -37,7 +35,12 @@ and open the template in the editor.
         </div>
         <footer>
             <div id="footer">
-                <p>footer</p>
+                <script>
+                    $(function ()
+                    {
+                        $("#footer").load("foot.html");
+                    });
+                </script>
             </div>
         </footer>
     </body>
