--- a/nav.html
+++ b/nav.html
@@ -3,5 +3,5 @@
     <li><a href="weapons.html">Zbraně</a></li>
     <li><a href="galery.html">Galerie</a></li>
     <li><a href="guides.html">Články</a></li>
-    <li><a href="default.asp">Pět</a></li>
+    <li><a href="companions.html">Společníci</a></li>
 </ul>
