--- a/companions.html
+++ b/companions.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                         <article>
                             <h3>Cait</h3>                        
                             <img class="imgCompanion" src="images/companions/Cait.jpg" alt="Obrázek Cait">
-                            <p>Cait je irského původu, má problémy s drogama, temperament a stará se především o sebe. Naleznete ji v Combat Zone, kde funguje jako místní šampión pěstních zápasů. Preferuje tedy především zbraně na blízko. Lze s ní mít romantický vztah. </p><br><br>
+                            <p>Cait je irského původu, má problémy s drogama, temperament a stará se především o sebe. Naleznete ji v Combat Zone, kde funguje jako místní šampión pěstních zápasů. Preferuje tedy především zbraně na blízko. Lze s ní mít romantický vztah. </p>
                             <table class="special">
                                 <caption>S.P.E.C.I.A.L. staty má následující:</caption>
                                 <tr>
