--- a/galery.html
+++ b/galery.html
@@ -24,13 +24,13 @@ and open the template in the editor.
         </div>
         <div id="page">
             <div class="galery">
-                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Mountain View"></a>
-                <a href="2.png"><img class="img" src="2.png" alt="Mountain View"></a>
-                <a href="3.jpg"><img class="img" src="3.jpg" alt="Mountain View"></a>
-                <a href="4.jpg"><img class="img" src="4.jpg" alt="Mountain View"></a>
+                <a href="titleImage.jpg"><img class="img" src="titleImage.jpg" alt="Titulní obrázek"></a>
+                <a href="2.png"><img class="img" src="2.png" alt="Pěkný obrázek"></a>
+                <a href="3.jpg"><img class="img" src="3.jpg" alt="Estetika sama"></a>
+                <a href="4.jpg"><img class="img" src="4.jpg" alt="Magnifique"></a>
             </div>
             <a href="#nav-placeholder"> 
-                <div id = "toTop">To Top</div>
+                <div id = "toTop">Nahoru</div>
             </a>
         </div>
         <footer>
