--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ and open the template in the editor.
         <div id="page">
             <h1>Fallout 4 fan stránky - Studentský projekt</h1>
             <p>Tato fanouškovská stránka se zabývá hrou Fallout 4, vyvinutá vývojářským studiem Bethesda.</p>
+            <p><a href="https://github.com/BlueBananasaurus/Projekt-web-design">GitHub</a></p>
             <div id="powerArmor">
 
             </div>
@@ -76,7 +77,7 @@ and open the template in the editor.
                 </section>
             </main>
             <a href="#nav-placeholder"> 
-                <div id = "toTop">To Top</div>
+                <div id = "toTop">Nahoru</div>
             </a>
         </div>
         <footer>
