--- a/companions.html
+++ b/companions.html
@@ -28,7 +28,7 @@ and open the template in the editor.
                     <section>
                         <h2>Všichni možní společníci</h2>                   
                         <article>
-                            <h3>Cait</h3>                        
+                            <h3 class="fullLine">Cait</h3>                        
                             <img class="imgCompanion" src="images/companions/Cait.jpg" alt="Obrázek Cait">
                             <p>Cait je irského původu, má problémy s drogama, temperament a stará se především o sebe. Naleznete ji v Combat Zone, kde funguje jako místní šampión pěstních zápasů. Preferuje tedy především zbraně na blízko. Lze s ní mít romantický vztah. </p>
                             <table class="special">
@@ -54,7 +54,7 @@ and open the template in the editor.
                             </table>
                         </article>
                         <article>
-                            <h3>Codsworth</h3>                        
+                            <h3 class="fullLine">Codsworth</h3>                        
                             <img class="imgCompanion" src="images/companions/Codsworth.png" alt="Obrázek Codswortha" style="width:15%;height:7%;">
                             <p>Codsworth je váš osobní služební robot, kterého jste vlastnil před válkou. Naleznete ho zcela bez problémů na začátku hry. Lze vylepšit a upravit pokud vlastníte Automatons DLC. Nelze s ním mít romantický vztah. </p> 
                             <table class="special">
@@ -80,7 +80,7 @@ and open the template in the editor.
                             </table>
                         </article>  
                         <article>
-                            <h3>Curie</h3>                        
+                            <h3 class="fullLine">Curie</h3>                        
                             <img class="imgCompanion" src="images/companions/Curie.jpg" alt="Obrázek Curie" style="width:15%;height:7%;">
                             <p>Curie je vědecký robot, na kterého narazíte ve Vaultu 81. V průběhu jejího osobního questu můžete její vědomí vložit do syntetického lidského těla. Lze s ní mít romantický vztah pokud je v syntetickém těle.</p> 
 
@@ -128,7 +128,7 @@ and open the template in the editor.
                             </table>
                         </article>
                         <article>
-                            <h3>Paladin Danse</h3>                        
+                            <h3 class="fullLine">Paladin Danse</h3>                        
                             <img class="imgCompanion" src="images/companions/Danse.jpg" alt="Obrázek Paladina Danse" style="width:15%;height:7%;">
                             <p>Paladin Danse je členem frakce Brotherhood of Steel. Setkat se s ním můžete v severním Bostonu kde narazíte na jeho nouzový vysílání. Vaším společníkem se může stát až po příletu hlavní armády do Bostonu a pokud se k něm přidáte. Nutno podotknout že je to jediný společník který je neustále v Power Armoru. Lze s ním mít romantický vztah. </p>
                             <table class="special">
@@ -154,7 +154,7 @@ and open the template in the editor.
                             </table>
                         </article> 
                         <article>
-                            <h3>Deacon</h3>                        
+                            <h3 class="fullLine">Deacon</h3>                        
                             <img class="imgCompanion" src="images/companions/Deacon.jpg" alt="Obrázek Deacon" style="width:15%;height:7%;">
                             <p>Deacon je agent frakce Railroad. Jeho specializací je špionáž a také vám to dává najevo tím, že se převléká do místních oblečení podle toho kam jdete. Aby mohl být váš společník, musíte se přidat k Railroadu a splnit počáteční quest. Nelze s ním mít romantický vztah.</p>
                             <table class="special">
@@ -180,7 +180,7 @@ and open the template in the editor.
                             </table>
                         </article>    
                         <article>
-                            <h3>Preston Garvey</h3>                        
+                            <h3 class="fullLine">Preston Garvey</h3>                        
                             <img class="imgCompanion" src="images/companions/not_for_long_living_meme.jpg" alt="Here, let me mark it on your map." style="width:15%;height:7%;">
                             <p>Preston Garvey je ta jediná reklama kterou Bethesda potřebuje aby jste si koupili Nukaworld a podrobili si Boston jako velitel banditů. Bohužel je nesmrtelný. Lze s ním mít romantický vztah ale kdo by to kdy dělal?</p>
                             <table class="special">
