--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ and open the template in the editor.
                     <article>
                         <h3>První velké DLC Far Harbor je oficiálně venku</h3>
                         <h3>19.5.2016</h3>
-                        <p>První velké příběhové DLC je oficiálně připraveno k objevení. Zavede nás na ostrov plný post-apokalyptických námořníků, smrtící radioaktivní mlhy a zmutovaných korýšů, kteří se hodlají pomstit za ty roky, co jsme si na nich pochutnávali.</p>
+                        <p>Lorem Ipsum here I come, Lorem Ipsum be my wife, Lorem Ipsum end my life.</p>
                     </article>
                     <article>
                         <h3>Oznámeno první velké příběhové DLC - Far Harbor</h3>
